// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $235,234,532.32
  </h1>
</div>
`;

exports[`should correctly render Expenses summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
